; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/misc/extr_vmware_balloon.c_vmballoon_check_status.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/misc/extr_vmware_balloon.c_vmballoon_check_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vmballoon = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vmballoon*, i64)* @vmballoon_check_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vmballoon_check_status(%struct.vmballoon* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.vmballoon*, align 8
  %5 = alloca i64, align 8
  store %struct.vmballoon* %0, %struct.vmballoon** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  switch i64 %6, label %11 [
    i64 128, label %7
    i64 129, label %8
  ]

7:                                                ; preds = %2
  store i32 1, i32* %3, align 4
  br label %12

8:                                                ; preds = %2
  %9 = load %struct.vmballoon*, %struct.vmballoon** %4, align 8
  %10 = getelementptr inbounds %struct.vmballoon, %struct.vmballoon* %9, i32 0, i32 0
  store i32 1, i32* %10, align 4
  br label %11

11:                                               ; preds = %2, %8
  store i32 0, i32* %3, align 4
  br label %12

12:                                               ; preds = %11, %7
  %13 = load i32, i32* %3, align 4
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
